# gevent-socketio

./: .gitignore  .travis.yml  README.rst  setup.cfg  setup.py  tox.ini
socketio/: __init__.py  exceptions.py  handler.py  packets.py  policyserver.py  protocol.py  server.py  session.py  transports.py
socketio/tests/: __init__.py  protocol.py  test_runner.py  test_servers.py
