[metadata]
name = pysocketio
version = 0.9.6a1
summary = Socket.IO compatible server with Gevent support
description-file = README.rst

home_page = https://github.com/Smartupz/gevent-socketio
project-url:
    Repository, https://github.com/Smartupz/gevent-socketio

author = Jeffrey Gelens
author_email = jeffrey@noppo.pro
maintainer = Łukasz Rekucki
maintainer_email = lrekucki+socketio@gmail.com

obosoletes-dist = gevent-socketio
requires-dist:
    gevent (==0.13.7)
    gevent-websocket (==0.3.6)
requires-python = 2.6, 2.7

classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    License :: OSI Approved :: BSD License

[files]
packages = socketio

[test]
test-suite = socketio.tests
